collected-item delete-button z-index fix.
Simple direct z-index fix.

Although the "*collection-subject-viewer-delete-button*" class is used after.in the "*subject-container*" class.
The "*subject-link*" class is applied(*html part*) after the button, which is *probably* the reason for the partial blocking of the delete button.

(*note: Chrome only user*)

--- a/css/collections.styl
+++ b/css/collections.styl
@@ -47,6 +47,7 @@
       right: -0.3em
       top: -0.3em
       width: 1.3em
+      z-index: 1
 
       &:hover
         color: red
